--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 .container{
     max-width: 100vw;
     height: 100vh;
@@ -24,19 +23,21 @@
 
 .bar{
     width: 10px;
-    background-color: aqua;
+    background-color: rgb(217, 168, 168);
     /* margin: 0 2px; */
     border-radius: 2px;
 }
 
 body{
-    background-color: #2c3e50;
+    background-color: rgb(252,252,242);
 }
+
+
 
 .buttons_container > button, select{
     width: 200px;
     height: 30px;
-    background-color: #677685;
+    background-color: #5283b5;
     border: none;
     border-radius: 5px;
     color: white;
@@ -47,5 +48,17 @@ body{
 }
 
 button:hover{
-    background-color: #56697b;
+    background-color: peachpuff;
 }
+
+/* input {
+    display: inline-block;
+    position: relative;
+  } */
+  
+label {
+    display: inline-block;
+    width: 10em;
+    /* margin-right: .5em;
+    padding-top: 1.5em; */
+  }
