--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+
 *{
-    padding: 0;
+    padding: 1;
     margin: 0;
     box-sizing: border-box;
 }
@@ -23,21 +24,25 @@
 
 .bar{
     width: 10px;
-    background-color: rgb(217, 168, 168);
-    /* margin: 0 2px; */
+    background-color: rgb(198, 175, 91);
+    margin: 0 2px;
     border-radius: 2px;
 }
 
 body{
     background-color: rgb(252,252,242);
+    
 }
 
-
+h1.header{
+    color:rgb(16, 16, 15);
+    text-align: center;
+}
 
 .buttons_container > button, select{
     width: 200px;
     height: 30px;
-    background-color: #5283b5;
+    background-color: #9caab8;
     border: none;
     border-radius: 5px;
     color: white;
@@ -51,14 +56,16 @@ button:hover{
     background-color: peachpuff;
 }
 
-/* input {
+input {
     display: inline-block;
     position: relative;
-  } */
+    top: .25em;
+  }
   
 label {
     display: inline-block;
-    width: 10em;
-    /* margin-right: .5em;
-    padding-top: 1.5em; */
+    width: 11em;
+    font-family: 'Courier New', Courier, monospace;
+    margin-right: 1em;
+    padding-top: 1.5em;
   }
