--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
 h1.header{
     color:rgb(16, 16, 15);
     text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .buttons_container > button, select{
